--- a/blueberry_pie.html
+++ b/blueberry_pie.html
@@ -2,39 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Md Golam Moctader" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
+	<main>
+		
+		<h1>Blueberry Pie</h1>
 
-    <h1>Blueberry Pie</h1>
-
-<p>Base</p>
-<ul>
-	<li>150 g margarine or butter</li>
-	<li>1,5 dl sugar</li>
-	<li>1 egg</li>
-	<li>3 dl wheat flower</li>
-	<li>1 teaspoon vanilla extract</li>
-	<li>1 teaspoon baking powder</li>
-</ul>
-<p>Mix sugar and soft margarine. Add other ingredients and mix the 
-	dough to be smooth. Spread the dough on the bottom of the pie 
-	tin, diameter about 30 cm.</p>
-
-<p>Add on base 400 g blueberries. Spread the blueberries evenly.</p>
-
-<p>Top dough</p> 
-<ul>
-	<li>100 g margarine</li>
-	<li>1 dl sugar</li>
-	<li>2 dl wheat flower</li>
-</ul>
-
-<p>Prepare the top dough by plucking all the ingredients and scatter 
-	over the blueberries.</p>                
-<p>Bake 30min in the oven about of 200 degrees Celsius.</p>
-<p>Serve with a vanilla ice cream or vanilla custard.</p>
-    
+		<p>Base</p>
+		<ul>
+			<li>150 g margarine or butter</li>
+			<li>1,5 dl sugar</li>
+			<li>1 egg</li>
+			<li>3 dl wheat flower</li>
+			<li>1 teaspoon vanilla extract</li>
+			<li>1 teaspoon baking powder</li>
+		</ul>
+		<p>Mix sugar and soft margarine. Add other ingredients and mix the 
+			dough to be smooth. Spread the dough on the bottom of the pie 
+			tin, diameter about 30 cm.</p>
+		
+		<p>Add on base 400 g blueberries. Spread the blueberries evenly.</p>
+		
+		<p>Top dough</p> 
+		<ul>
+			<li>100 g margarine</li>
+			<li>1 dl sugar</li>
+			<li>2 dl wheat flower</li>
+		</ul>
+		
+		<p>Prepare the top dough by plucking all the ingredients and scatter 
+			over the blueberries.</p>                
+		<p>Bake 30min in the oven about of 200 degrees Celsius.</p>
+		<p>Serve with a vanilla ice cream or vanilla custard.</p> 
+			
+	</main>
 </body>
 </html>
