--- a/blueberry_pie.html
+++ b/blueberry_pie.html
@@ -1,6 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<style>
+	ul {
+		max-width: 20em;
+		background-color: rgb(172, 206, 207);
+		padding-top: 10px;
+		padding-bottom: 10px;
+		border-width: 1px;
+		border-color: black;
+		border-radius: 10px;
+		border: 1px solid  rgb(172, 206, 207);
+
+	}
+
+	body {
+		background-color: rgb(218, 199, 180);
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-top: 5px;
+		padding-bottom: 5px;
+
+	}
+
+		
+	main{
+		background-color: rgb(244, 245, 245);
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-top: 10px;
+		border-width: 1px;
+		border-radius: 10px;
+		padding-bottom: 10px;
+		
+	}
+
+	</style>
     <meta charset="UTF-8">
     <meta name="Md Golam Moctader" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
